--- a/docker_compose/app.yaml
+++ b/docker_compose/app.yaml
@@ -8,7 +8,7 @@ services:
     container_name: main-app
     ports: 
       - "${DJANGO_PORT}:8000"
-    command: "python manage.py runserver 0.0.0.0:8000"
+    command: "sh /entrypoint.sh"
     env_file:
       - ../.env
     volumes:
