--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ django = "^5.0.4"
 django-bootstrap5 = "^24.1"
 dj-database-url = "^2.1.0"
 python-dotenv = "^1.0.1"
+django-filter = "^24.2"
 
 
 [build-system]
