--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,9 @@ python-dotenv = "^1.0.1"
 django-filter = "^24.2"
 
 
+[tool.poetry.group.dev.dependencies]
+flake8 = "^7.0.0"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
