--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dj-database-url = "^2.1.0"
 python-dotenv = "^1.0.1"
 django-filter = "^24.2"
 django-ninja = "^1.1.0"
+rollbar = "^1.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
