--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,13 +3,13 @@ version: '3.9'
 services:
   main-app:
     build:
-      context: ..
+      context: .
       dockerfile: Dockerfile
     container_name: main-app
     ports: 
       - "${DJANGO_PORT}:8000"
     command: "sh /entrypoint.sh"
     env_file:
-      - ../.env
+      - ./.env
     volumes:
-      - ..:/app/
+      - .:/app/
